# avaverse

./: .gitignore  CMakeLists.txt  Dockerfile
avaverse/: CMakeLists.txt
avaverse/common/: CMakeLists.txt
avaverse/common/include/avaverse/: config.hpp  type.hpp
avaverse/common/include/common/: config.hpp  type.hpp
avaverse/skinning/: CMakeLists.txt
avaverse/skinning/include/avaverse/: skinning.hpp
avaverse/skinning/include/skinning/: skinning.hpp
avaverse/skinning/src/: skinning.cpp
data/skeleton/: deform.fbx  deform.npy  deform.tgf  fbx2npy.py  model.dmat  model.mesh  model.npy  model.tgf  npy2tgf.py  retargeting.npy  retargeting.tgf
data/texture/: README.md  model.mtl  model.ply
tools/: CMakeLists.txt  mesh2bbw.cpp  skinning.cpp  texture.cpp
